--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <br>
                 <hr>
         <br>
-                <center><a href="https://www.gatesnotes.com/"><img src="image/bill" alt="www.gatesnotes.com"></a>
+                <center><a href="https://www.gatesnotes.com/"><img src="image/bill.png" alt="www.gatesnotes.com"></a>
                 </center>
         <br>
                 <a href="https://ua.sinoptik.ua/">it's my favorit site about the weather</a>
