--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
+        <meta charset="utf-8">
         <title>Home-Work2</title>
     </head>
     <body>
         <br>
             <hr>
         <br>
-                <h1>Домашнє завдання</h1>
+                <h1 lang="ua">Домашнє завдання</h1>
         <br>
             <hr>
                 <img src="image/kiwi.svg" alt="kiwi.svg">
@@ -23,11 +24,14 @@
             <hr>
                 <h2>Jason Briscoe</h2>
                 <p>Here’s My Story.
-                <br>
+        <br>
                 My passion for Branding, Design & innovation led me to create Area & 
-                <br>Unreel.fm. I play the Bagpipes & love to Travel. I’m currently on 
-                <br>a Mission to give someone a fresh set of eyes. I share my thoughts 
-                <br>on Twitter, my pics on Instagram & my words on Stage.
+        <br>
+                Unreel.fm. I play the Bagpipes & love to Travel. I’m currently on 
+        <br>
+                a Mission to give someone a fresh set of eyes. I share my thoughts 
+        <br>
+                on Twitter, my pics on Instagram & my words on Stage.
                 </p>
                 
         <br>
