--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <br>
             <hr>
         <br>
-                <h1 lang="ua">Домашнє завдання</h1>
+                <h1 lang="uk">Домашнє завдання</h1>
         <br>
             <hr>
                 <img src="image/kiwi.svg" alt="kiwi.svg">
