--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
         <hr>
             <br>
             <h3> Bruce Lee Demonstrates Some Kung Fu Moves</h3>
-            <vedeo src="bruce.mp4" width="600" height="450" controls></vedeo>
+            <vedeo src="bruce.mp4" width="600" height="450" controls>
+            </vedeo>
             <br>
         <hr>
             <h3>Soundtrack groups "Lamansh" - "Погляд"</h3>
-            <audio src="sample.mp3" controls="controls">
+            <audio src="music/sample.mp3" controls="controls">
             </audio>
 
     </body>
