--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <hr>
             <br>
             <h3> Bruce Lee Demonstrates Some Kung Fu Moves</h3>
-            <vedeo src="bruce.mp4" width="600" height="450" controls>
+            <vedeo src="https://www.youtube.com/watch?v=v8wL3AA4BP0" width="600" height="450" controls>
             </vedeo>
             <br>
         <hr>
