--- a/index.html
+++ b/index.html
@@ -46,12 +46,12 @@
         <hr>
             <br>
             <h3> Bruce Lee Demonstrates Some Kung Fu Moves</h3>
-            <vedeo src="https://www.youtube.com/watch?v=v8wL3AA4BP0" width="600" height="450" controls>
+            <vedeo src="https://www.youtube.com/watch?v=v8wL3AA4BP0" width="400" height="300" controls>
             </vedeo>
             <br>
         <hr>
             <h3>Soundtrack groups "Lamansh" - "Погляд"</h3>
-            <audio src="music/sample.mp3" controls="controls">
+            <audio src="music/lamansh-poglad.mp3" controls="controls">
             </audio>
 
     </body>
