--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <h3 style="color: red">Some media samples</h3>
             <br>
         
-            <video src="github-and-cloud9.mp4" width="400" height="300" controls>
+            <video src="bruce.mp4" width="400" height="300" controls>
             </video>
             <br>
         <hr>
