--- a/index.html
+++ b/index.html
@@ -37,22 +37,19 @@
             </p>
                 
             <br>
-            <h3 style="color: red">Some media samples</h3>
-            <br>
-        
-            <video src="bruce.mp4" width="400" height="300" controls>
-            </video>
+            <h2 style="color: red"><center>Some media samples</center></h2>
             <br>
         <hr>
             <br>
             <h3> Bruce Lee Demonstrates Some Kung Fu Moves</h3>
-            <vedeo src="bruce.mp4" width="400" height="300" controls>
-            </vedeo>
+            <video src="bruce.mp4" width="800" height="600" controls>
+            </video>
             <br>
         <hr>
             <h3>Soundtrack groups "Lamansh" - "Погляд"</h3>
             <audio src="music/lamansh-poglad.mp3" controls="controls">
             </audio>
-
+            <br>
+            <h1>The END<table>
     </body>
 </html>
