--- a/index.html
+++ b/index.html
@@ -42,7 +42,9 @@
         <hr>
             <br>
             <h3> Bruce Lee Demonstrates Some Kung Fu Moves</h3>
-            <video src="bruce.mp4" width="800" height="600" controls>
+            <center>
+                <video src="bruce.mp4" width="800" height="600" controls>
+            </center>
             </video>
             <br>
         <hr>
@@ -50,6 +52,6 @@
             <audio src="music/lamansh-poglad.mp3" controls="controls">
             </audio>
             <br>
-            <h1>The END<table>
+            <h1><center>The END</center><table>
     </body>
 </html>
