--- a/index.html
+++ b/index.html
@@ -41,15 +41,17 @@
             <br>
         <hr>
             <br>
-            <h3> Bruce Lee Demonstrates Some Kung Fu Moves</h3>
+            <h3><center>Bruce Lee Demonstrates Some Kung Fu Moves</center></h3>
             <center>
                 <video src="bruce.mp4" width="800" height="600" controls>
             </center>
             </video>
             <br>
         <hr>
-            <h3>Soundtrack groups "Lamansh" - "Погляд"</h3>
-            <audio src="music/lamansh-poglad.mp3" controls="controls">
+            <h3><center>Soundtrack groups "Lamansh" - "Погляд"</center></h3>
+            <center>
+                <audio src="music/lamansh-poglad.mp3" controls="controls">
+            </center>
             </audio>
             <br>
             <h1><center>The END</center><table>
