--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
             <br>
         <hr>
             <br>
-            <h3>The image is clickable</h3>
-            <center><a href="https://www.gatesnotes.com/"><img src="image/bill.png" alt="www.gatesnotes.com"></a>
+            <h3>
+            <center>
+            The image is clickable
             </center>
-            <br>
-            <a href="https://ua.sinoptik.ua/">it's my favorit site about the weather</a>
+            </h3>
+            <center>
+                <a href="https://www.gatesnotes.com/"><img src="image/bill.png" alt="www.gatesnotes.com"></a>
+            </center>
             <br>
         <hr>
             <h2>Jason Briscoe</h2>
@@ -54,6 +57,11 @@
             </center>
             </audio>
             <br>
-            <h1><center>The END</center><table>
+            <h1>
+            <center>
+                The END
+            </center>
+            </h1>
+            
     </body>
 </html>
