--- a/index.html
+++ b/index.html
@@ -46,17 +46,15 @@
             <br>
             <h3><center>Bruce Lee Demonstrates Some Kung Fu Moves</center></h3>
             <center>
-                <video src="bruce.mp4" width="800" height="600" controls>
+                <video src="bruce.mp4" width="800" height="600" controls></video>
             </center>
-            </video>
             <br>
         <hr>
             <h3><center>Soundtrack groups "Lamansh" - "Погляд"</center></h3>
             <center>
-                <audio src="music/lamansh-poglad.mp3" controls="controls">
+                <audio src="music/lamansh-poglad.mp3" controls="controls"></audio>
             </center>
-            </audio>
-            <br>
+           <br>
             <h1>
             <center>
                 The END
